@@ -30,6 +30,11 @@ int
 ::Server::run(int argc, char* argv[])
 {
     Ice::PropertiesPtr properties = communicator()->getProperties();
+
+    Ice::StringSeq args = Ice::argsToStringSeq(argc, argv);
+    args = properties->parseCommandLineOptions("Test", args);
+    Ice::stringSeqToArgs(args, argc, argv);
+
     string name = properties->getProperty("Ice.ProgramName");
 
     Ice::ObjectAdapterPtr adapter = communicator()->createObjectAdapter("Server");
