@@ -1,5 +1,8 @@
 <server kind="cpp">
 
+  <option>--Test.Test=2</option>
+  <option>--Test.Test1=0</option>
+
   <target name="manual">
     <activation mode="manual"/>
     <property name="Mode" value="manual"/>
